# KGPL2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  example.cpp
src/: CMakeLists.txt  KGPL.h  KGPL_application.h  KGPL_event.h  KGPL_window.cpp  KGPL_window.h
